# dotfiles

./: .bash_profile  .bashrc  .eslintrc.yml  .gitconfig  .gitignore  .irbrc  .npmrc  .skhdrc  .tmux.conf  .yabairc  .zprofile  .zshenv  .zshrc  CONTEXT.md  LICENSE  Makefile  README.org  WARP+.org.gpg  com.github.skhd.plist  com.github.yabai.plist  com.googlecode.iterm2.plist  install-kotlin-lsp.sh  ispell_english  setup-osx.sh  setup.org  skhdrc  stylesheet.css  tmux.conf  userstyle.css  wezterm.lua  yabairc
.config/fish/: config.fish
.config/karabiner/: karabiner.json
.emacs.d/: authinfo.gpg  custom.el  emacs.org  init.el  init.org
.hammerspoon/: init.lua
.nixpkgs/: config.nix  darwin-configuration.nix  emacs-mac.nix
.scratch/agent-notebook-resume-actions/: AGENT-BRIEF.md  PRD.md
.scratch/emacs-command-workspace/: PRD.md
agents/: notmuch-customization.org
bash/: bash_profile  bashrc
cc/: Cargo.toml
cc/src/: cli.rs  config.rs  main.rs  pty.rs
cx/: Cargo.toml
cx/src/: cli.rs  config.rs  main.rs  pty.rs  worktree.rs
docs/adr/: 0002-workflow-agent-cli-uses-ocaml.md  (+17 more)
emacs/: .mc-lists.el  authinfo.gpg  clear-light-theme.el  codeberg-dark-theme.el  custom.el  early-init.el  init.el  init.org  ob-http-tests.el  td-command-workspace-code-cells-smoke.el  td-command-workspace-tests.el  td-command-workspace.el
emacs-host/: .gitignore  Makefile  Package.swift  README.md  SPEC.md
git/: gitconfig
ports/: Makefile  PortIndex  PortIndex.quick
ruby/: irbrc
tdwm/: config.yaml
templates/: .eslintrc.yml
zsh_functions/: _poetry  prompt_tungd_setup
(+163 files in other folders)
